# Induspot

./: .firebaserc  .gitignore  README.md  SECURITY.md  architecture_overview.md  deploy.ps1  docker-compose.yml  firebase.json  middleware.ts  mypage_test.html  package-lock.json  package.json  proxy.ts
apps/api/: .env.example  .gcloudignore  Dockerfile  README.md  openapi-gateway.yaml  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: bigquery.py  config.py  logging.py  supabase.py
apps/api/app/jobs/: publish_congestion.py
apps/api/app/routers/: diagnostics.py  forecast.py  infrastructures.py  ingest.py  predict.py  preferences.py  recommendations.py
apps/api/app/services/: bq_forecast_service.py  embedding_service.py  reason_service.py  (+5 more)
apps/api/dataflow/: README.md  congestion_pipeline.py  launch_dataflow.py  requirements.txt  setup.py  test_congestion_pipeline.py
apps/api/evidence/: LIVE_EVIDENCE.md  evidence.json
apps/api/scripts/: _check_bq_count.py  _check_gateway.py  _check_infra.py  _check_ingest.py  _check_reason.py  _extract_coef.py  _gcloud.py  _provision_infra.py  _rebuild_and_deploy.py  _run_bqml.py  _verify_endpoint.py  capture_live_evidence.py  deploy_gateway.py  deploy_publisher_job.py  deploy_vertex.py  grant_runtime_iam.py  load_bq.py  provision_bigquery.py  provision_firestore.py  provision_pubsub.py  refresh_forecast.py  refresh_forecast.sql  seed_facility_embeddings.py  setup_forecast_schedule.py  setup_secrets.py  train.py  upload_model.py  verify_ai_live.py
apps/api/sql/: bqml_forecast.sql  promote_admin.sql
(+98 files in other folders)
