[tool.poetry]
name = "api"
version = "0.1.0"
description = "InduSpot Smart Industrial Infrastructure Congestion Control API Engine"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
supabase = "^2.3.0"
pinecone = "^3.1.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
structlog = "^24.1.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
scikit-learn = "^1.4.0"
joblib = "^1.3.0"
google-cloud-storage = "^2.14.0"
google-cloud-aiplatform = "^1.71.0"
google-cloud-bigquery = "^3.27.0"
google-cloud-pubsub = "^2.27.0"
google-auth = "^2.35.0"
google-cloud-secret-manager = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
